--- a/style.css
+++ b/style.css
@@ -3,17 +3,19 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 :root {
-    --width: 100px;
+    --width: 100px
 }
 
 main{
     width: 100%;
-    height: 100dvh;
+    height: 100vh;
     display: grid;
     place-items: center;
     background: #3d515b;
 }
+
 nav {
     flex: 1;
     padding: 10px 2px;
@@ -33,15 +35,15 @@ nav > div {
 div > svg {
     stroke: #fff;
     width: 40px;
-    transition:  .4s cubic-bezier(0.48, 1.07, 1, 1.27);
+    transition: .4s cubic-bezier(0.48, 1.07, 1, 1.27);
 }
 
-div:hover svg{
-    transform: translateY(-40px);
+div:hover svg {
+    transform:  translateY(-40px);
 }
 
-.indicator{
-    display: none;
+.indicator {
+    transform: scale(.1);
     position: absolute;
     top: -40px;
     left: 22px;
@@ -55,22 +57,20 @@ div:hover svg{
 }
 
 div:hover ~ .indicator {
-    display: block;
+    transform: scale(1);
 }
 
-
-div:hover:nth-child(2) ~ .indicator{
+div:hover:nth-child(2) ~ .indicator {
     transform: translateX(calc(var(--width) * 1));
 }
-div:hover:nth-child(3) ~ .indicator{
+div:hover:nth-child(3) ~ .indicator {
     transform: translateX(calc(var(--width) * 2));
 }
-div:hover:nth-child(4) ~ .indicator{
+div:hover:nth-child(4) ~ .indicator {
     transform: translateX(calc(var(--width) * 3));
 }
-div:hover:nth-child(5) ~ .indicator{
+div:hover:nth-child(5) ~ .indicator {
     transform: translateX(calc(var(--width) * 4));
 }
-
 
 
